[tool.poetry]
name = "graphlembic"
version = "0.1.0"
description = "Graphlebmic is a micro-migration tool for Neo4J DB"
authors = ["WindowGenerator <chudov42@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
neo4j = "^5.13.0"
typeguard = "^4.1.5"

[tool.poetry.dev-dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
